// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bodied-insert-1.ts: Bodied Extension: Insert Code block 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "extensionKey": "bodied-eh",
        "extensionType": "com.atlassian.confluence.macro.core",
        "layout": "default",
        "parameters": Object {
          "macroMetadata": Object {
            "placeholder": Array [
              Object {
                "data": Object {
                  "url": "",
                },
                "type": "icon",
              },
            ],
          },
          "macroParams": Object {},
        },
        "text": null,
      },
      "content": Array [
        Object {
          "type": "paragraph",
        },
        Object {
          "attrs": Object {
            "language": null,
            "uniqueId": null,
          },
          "type": "codeBlock",
        },
      ],
      "type": "bodiedExtension",
    },
  ],
  "type": "doc",
}
`;

exports[`bodied-insert-1.ts: Bodied Extension: Insert Decision 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "extensionKey": "bodied-eh",
        "extensionType": "com.atlassian.confluence.macro.core",
        "layout": "default",
        "parameters": Object {
          "macroMetadata": Object {
            "placeholder": Array [
              Object {
                "data": Object {
                  "url": "",
                },
                "type": "icon",
              },
            ],
          },
          "macroParams": Object {},
        },
        "text": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "localId": "abc-123",
          },
          "content": Array [
            Object {
              "attrs": Object {
                "localId": "abc-123",
                "state": "DECIDED",
              },
              "type": "decisionItem",
            },
          ],
          "type": "decisionList",
        },
      ],
      "type": "bodiedExtension",
    },
  ],
  "type": "doc",
}
`;

exports[`bodied-insert-1.ts: Bodied Extension: Insert Panel 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "extensionKey": "bodied-eh",
        "extensionType": "com.atlassian.confluence.macro.core",
        "layout": "default",
        "parameters": Object {
          "macroMetadata": Object {
            "placeholder": Array [
              Object {
                "data": Object {
                  "url": "",
                },
                "type": "icon",
              },
            ],
          },
          "macroParams": Object {},
        },
        "text": null,
      },
      "content": Array [
        Object {
          "attrs": Object {
            "panelType": "info",
          },
          "content": Array [
            Object {
              "type": "paragraph",
            },
          ],
          "type": "panel",
        },
      ],
      "type": "bodiedExtension",
    },
  ],
  "type": "doc",
}
`;
